# git-all-status

./: .gitignore  Cargo.toml  LICENSE  README.md
.github/workflows/: ci.yml  release.yml
docs/: ui-proposals.md
src/: app.rs  cache.rs  config.rs  event.rs  git.rs  main.rs  scanner.rs  types.rs
src/ui/: detail.rs  mod.rs  repo_list.rs
