[package]
name = "dirtygit"
version = "0.2.2"
edition = "2021"
description = "TUI dashboard to monitor git status across multiple repositories"
license = "MIT"
repository = "https://github.com/ycookiey/dirtygit"
keywords = ["git", "tui", "dashboard", "status", "ratatui"]
categories = ["command-line-utilities", "development-tools"]

[dependencies]
ratatui = "0.29"
crossterm = "0.28"
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
toml = "0.8"
dirs = "6"
chrono = "0.4"
serde_json = "1"
hostname = "0.4"
